added home link

--- a/datapage.html
+++ b/datapage.html
@@ -21,19 +21,19 @@
         <!-- Materialize Nav Bar -->
         <nav class="white navbar navbar-expand-lg navbar-light bg-light" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo"><img id="logo" src="Images/logo.jpg" alt=""></a>
+                <a id="logo-container" href="https://ckalla87.github.io/Pocket-Move-Me/" class="brand-logo"><img id="logo" src="Images/logo.jpg" alt=""></a>
             </div>
             <div>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://ckalla87.github.io/Pocket-Move-Me/">Home</a></li>
                     <li><a href="https://www.northamerican.com/household-moving/faqs">Moving FAQS</a></li>
                     <li><a href="https://www.realsimple.com/home-organizing/organizing/moving/moving-checklist">Checklist</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="sidenav" id="mobile-demo">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://ckalla87.github.io/Pocket-Move-Me/">Home</a></li>
                     <li><a href="https://www.northamerican.com/household-moving/faqs">Moving FAQS</a></li>
                     <li><a href="https://www.realsimple.com/home-organizing/organizing/moving/moving-checklist">Checklist</a></li>
                 </ul>
