--- a/datapage.html
+++ b/datapage.html
@@ -120,7 +120,7 @@
             <div class="section no-pad-bot">
                 <div class="container">
                     <div class="row center">
-                        <h5 class="header col s12 light" id="slogan">Updated City Data At Your Fingertips!</h5>
+                        <h5 class="header col s12 light" id="slogan">Updated city data at your fingertips!</h5>
                     </div>
                 </div>
             </div>
