fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="icon-block">
               <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
               <h5 class="center">Moving Made Easy</h5>
-              <p class="light">We help you make the decision on where you want to live before you ever get there.  We will provide all the information you need, so rest assured we got your back on this one! We might not help you pick up your boxes but we can gurantee we will make moving as painless as possible once you decide where you want to go. So lay back, pull out your media device and start planning your next destination!</p>
+              <p class="light">We help you make the decision on where you want to live before you ever get there.  We will provide all the information you need, so rest assured we got your back on this one! We might not help you pick up your boxes but we can guarantee we will make moving as painless as possible once you decide where you want to live. So lay back, pull out your media device and start planning your next destination!</p>
             </div>
           </div>
           <div class="col s12 m4">
@@ -108,7 +108,7 @@
       <div class="section no-pad-bot">
         <div class="container">
           <div class="row center">
-            <h5 class="header col s12 light" id="slogan">An interactive framework with realtime data on the go.</h5>
+            <h5 class="header col s12 light" id="slogan">An interactive framework with real-time data on the go.</h5>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">Company Bio</h5>
-            <p class="grey-text text-lighten-4">Pokect Move Me is a team of adventurers that want to help others make sound descisions on their next big move. We know what it's like so we want to make it easier for you.</p>
+            <p class="grey-text text-lighten-4">Pocket Move Me is a team of adventurers that want to help others make sound decisions on their next big move. We know what it's like so we want to make it easier for you.</p>
           </div>
           <div class="col l3 s12">
             <h5 class="white-text">Connect With The Creators</h5>
