--- a/datapage.html
+++ b/datapage.html
@@ -135,7 +135,7 @@
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Company Bio</h5>
-                        <p class="grey-text text-lighten-4">Pokect Move Me is a team of adventurers that want to help others make sound descisions on their next big move. We know what it's like so we want to make it easier for you.</p>
+                        <p class="grey-text text-lighten-4">Pocket Move Me is a team of adventurers that want to help others make sound decisions on their next big move. We know what it's like so we want to make it easier for you.</p>
                     </div>
                     <div class="col l3 s12">
                         <h5 class="white-text">Connect With The Creators</h5>
