--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <form id="city-form">
                     <button type="submit" class="btn btn-default" id="add-city">
                     <i class="material-icons">search</i>
-                  </button> </span> <input class="form-control" id="city-input" placeholder=" Search for..."> 
+                  </button> </span> <input class="form-control" id="city-input" placeholder=" Search for a city..."> 
                 </form>
                 </div><p id="update">*Beta v1.0 can only search the Four Corner States at this time. Don't you worry, updates are on the way.</p> 
               </div> 
@@ -95,11 +95,11 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4" id="cityProf">City Profile</span>
+                          <br>
                         <div id="pop-view"></div>
                         <div>Points of interest: </div>
                           <br>
                         <div id="prof-view"></div>
-                        <div id="map"></div>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">City Profile<i class="material-icons right">close</i></span>
@@ -117,6 +117,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4" id="schoolDist">School Districts</span>
+                          <br>
                         <div id="schools-view"></div>
                   
                     </div>
@@ -136,6 +137,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4" id="apartments">Apartments</span>
+                          <br>
                         <div id="cities-view"></div>
                     </div>
                     <div class="card-reveal">
@@ -239,7 +241,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          <p>&#64; Copyright 2018<a class="red-text text-3"> Pocket Move Me</a>
+          <p>	&copy; Copyright 2018<a class="red-text text-3"> Pocket Move Me</a>
         </div>
       </div>
     </footer>
